Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5989

Linguist crashes when closing one of the ts files

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.6.0
    • 4.6.0
    • Tools: Linguist
    • None
    • Kubuntu Linux
    • 7367a12c4a0d7686b9d35778e5de33a463504d75

    Description

      To reproduce the crash:
      1) open linguist
      2) load a ts file
      3) load a second ts file of an other language in the same instance of linguist
      4) close the second ts file (menu file-> close ...)
      5) enjoy

      Here is the backtrace of the release version:
      #0 0x00007fe8f4ee4954 in QWidget::isActiveWindow (this=0x0) at kernel/qwidget.cpp:6337
      #1 0x0000000002999de0 in ?? ()
      #2 0x0000000000000001 in ?? ()
      #3 0x000000000047e132 in MessageEditor::activeTranslation (this=<value optimized out>) at messageeditor.cpp:411
      #4 0x0000000000482de5 in QWidget::setFocus (this=0x2396b80, model=0) at ../../../include/QtGui/../../src/gui/kernel/qwidget.h:416
      #5 MessageEditor::messageModelDeleted (this=0x2396b80, model=0) at messageeditor.cpp:262
      #6 0x00000000004a5ce6 in MessageEditor::qt_metacall (this=0x2396b00, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff73fd9bc0) at .moc/release-shared/moc_messageeditor.cpp:152
      #7 0x00007fe8f49aed83 in QMetaObject::activate (sender=0x237b270, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x2334780) at kernel/qobject.cpp:3274
      #8 0x00000000004a6c5f in MultiDataModel::modelDeleted (this=0x0, _t1=1) at .moc/release-shared/moc_messagemodel.cpp:219
      #9 0x000000000048e948 in MultiDataModel::close (this=0x237b270, model=1) at messagemodel.cpp:763
      #10 0x00000000004716c2 in MainWindow::closeFile (this=0x7fff73fdb460) at mainwindow.cpp:730
      #11 0x00000000004a53fd in MainWindow::qt_metacall (this=0x7fff73fdb460, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff73fd9e00) at .moc/release-shared/moc_mainwindow.cpp:184
      #12 0x00007fe8f49aed83 in QMetaObject::activate (sender=0x2324650, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x2334780) at kernel/qobject.cpp:3274
      #13 0x00007fe8f4e8e3d2 in QAction::triggered (this=0x0, _t1=7) at .moc/release-shared/moc_qaction.cpp:263
      #14 0x00007fe8f4e903bb in QAction::activate (this=0x2324650, event=<value optimized out>) at kernel/qaction.cpp:1233
      #15 0x00007fe8f52c865d in ~ExceptionGuard (this=<value optimized out>, causedStack=..., action=0x2324650, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:981
      #16 QMenuPrivate::activateCausedStack (this=<value optimized out>, causedStack=..., action=0x2324650, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1033
      #17 0x00007fe8f52ce05a in QMenuPrivate::activateAction (this=0x2329770, action=0x2324650, action_e=QAction::Trigger, self=<value optimized out>) at widgets/qmenu.cpp:1053
      #18 0x00007fe8f4ee9ad9 in QWidget::event (this=0x2329740, event=0x7fff73fda940) at kernel/qwidget.cpp:7970
      #19 0x00007fe8f52d02db in QMenu::event (this=0x0, e=0x7) at widgets/qmenu.cpp:2356
      #20 0x00007fe8f4e943fc in QApplicationPrivate::notify_helper (this=0x2217640, receiver=<value optimized out>, e=0x7fff73fda940) at kernel/qapplication.cpp:4245
      #21 0x00007fe8f4e9b271 in QApplication::notify (this=0x7fff73fdb8a0, receiver=0x2329740, e=0x7fff73fda940) at kernel/qapplication.cpp:3821
      #22 0x00007fe8f499c0cc in QCoreApplication::notifyInternal (this=0x7fff73fdb8a0, receiver=0x2329740, event=0x7fff73fda940) at kernel/qcoreapplication.cpp:704
      #23 0x00007fe8f4e9a3e6 in QCoreApplication::sendSpontaneousEvent (receiver=0x2329740, event=0x7fff73fda940, alienWidget=0x0, nativeWidget=0x2329740, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>,
      spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
      #24 QApplicationPrivate::sendMouseEvent (receiver=0x2329740, event=0x7fff73fda940, alienWidget=0x0, nativeWidget=0x2329740, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true)
      at kernel/qapplication.cpp:2954
      #25 0x00007fe8f4f18905 in QETWidget::translateMouseEvent (this=0x2329740, event=<value optimized out>) at kernel/qapplication_x11.cpp:4302
      #26 0x00007fe8f4f171ca in QPointer<QWidget>::operator= (this=<value optimized out>, event=0x7fff73fdb0c0) at ../../include/QtCore/../../src/corelib/kernel/qpointer.h:68
      #27 QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff73fdb0c0) at kernel/qapplication_x11.cpp:3499
      #28 0x00007fe8f4f4159a in x11EventSourceDispatch (s=0x2225350, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:130
      #29 0x00007fe8f345ebbe in g_main_context_dispatch () from /lib/libglib-2.0.so.0
      #30 0x00007fe8f3462588 in ?? () from /lib/libglib-2.0.so.0
      #31 0x00007fe8f34626b0 in g_main_context_iteration () from /lib/libglib-2.0.so.0
      #32 0x00007fe8f49c5633 in QEventDispatcherGlib::processEvents (this=0x2221740, flags=DWARF-2 expression error: DW_OP_reg operations must be used either alone or in conjuction with DW_OP_piece.
      ) at kernel/qeventdispatcher_glib.cpp:407
      #33 0x00007fe8f4f4119e in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=DWARF-2 expression error: DW_OP_reg operations must be used either alone or in conjuction with DW_OP_piece.
      ) at kernel/qguieventdispatcher_glib.cpp:198
      #34 0x00007fe8f499a9f2 in QEventLoop::processEvents (this=<value optimized out>, flags=DWARF-2 expression error: DW_OP_reg operations must be used either alone or in conjuction with DW_OP_piece.
      ) at kernel/qeventloop.cpp:147
      #35 0x00007fe8f499adcc in QEventLoop::exec (this=0x7fff73fdb3e0, flags=DWARF-2 expression error: DW_OP_reg operations must be used either alone or in conjuction with DW_OP_piece.
      ) at kernel/qeventloop.cpp:201
      #36 0x00007fe8f499eb0b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:979
      #37 0x000000000045e2d4 in main (argc=2, argv=<value optimized out>) at main.cpp:120

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            poulain Benjamin Poulain (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes