fix crash on closing "rightmost" file

"This cannot happen" ... yeah, right. :}

Task-number: QTBUG-5989
(cherry picked from commit 7367a12c4a0d7686b9d35778e5de33a463504d75)